Prevent scrollbars in places where they are not needed

--- a/style/sass/options/v-options-menu.scss
+++ b/style/sass/options/v-options-menu.scss
@@ -5,7 +5,7 @@
   @include paper-shadow();
   float: left;
   height: calc(100vh - 64px);
-  overflow: scroll;
+  overflow: auto;
   padding: 8px 0 48px;
   position: relative;
   transition: width 400ms;
