--- a/style/sass/v-panel.scss
+++ b/style/sass/v-panel.scss
@@ -11,7 +11,7 @@
 
   &--content {
     height: 100vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding-top: 128px;
   }
 }
