--- a/style/sass/v-select.scss
+++ b/style/sass/v-select.scss
@@ -39,7 +39,7 @@
     background-color: $color-white;
     list-style: none;
     max-height: 500px;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 8px 0;
     position: absolute;
     top: -21px;
